<resources>
    <string name="app_name">SymptomaticApp</string>
    <string name="title_activity_add_problem">AddProblemActivity</string>
    <string name="enter_title">Enter title here (max 30 characters)</string>
    <string name="enter_title2">Enter a title for the problem:</string>
    <string name="enter_start_date">Enter a start date for the problem:</string>
    <string name="enter_description">Enter a brief description:</string>
    <string name="choose_date">Click here to select date</string>
    <string name="enter_description2">Enter description here (max 300 characters)</string>
    <string name="add_problem">Add Problem</string>
    <string name="save_problem">Save Problem</string>
    <string name="add_record">Add Record</string>
    <string name="problem">Problem:</string>
    <string name="time_stamp">Time Stamp: (current date)</string>
    <string name="change_date">Select to change date</string>
    <string name="add_comment">Include a comment:</string>
    <string name="view_patient_problems">View</string>
    <string name="select_patient_first">Please select a patient</string>
    <string name="viewcontactinfo">View Contact Info</string>
    <string name="symptomatic">Symptomatic</string>
    <string name="enter_username_please">Please enter your desired username below</string>
    <string name="unique_username">It must be unique, and at least 8 characters</string>
    <string name="enter_username">Enter username here</string>
    <string name="addcomment">Add Comment</string>
    <string name="enter_email_please">Please enter your email address</string>
    <string name="enter_email">Enter email address here</string>
    <string name="enter_number_please">Please enter your phone number</string>
    <string name="enter_number">Enter phone number here</string>
    <string name="specify_role">Please specify your  role</string>
    <string name="create_account">Create Account</string>
    <string name="view_full_problem">View full problem</string>
    <string name="title_activity_create_account">createAccount</string>
    <string name="add_bodylocation">Include a body location: </string>
    <string name="add_photos">Upload Photos: </string>
    <string name="saved_photo">Add Saved Photo</string>
    <string name="new_photo">Take New Photo</string>
    <string name="add_geolocation">Include your Geo-Location: </string>
    <string name="add_bodylocationphotos">Add</string>
    <string name="save_record">Save Record</string>
    <string name="view_all_problems">View All Problems</string>
    <string name="view_records">View Records</string>
    <string name="edit_problem">Edit</string>
    <string name="edit_problem2">Edit Problem</string>
    <string name="view_problems">View Patient</string>
    <string name="view_photo_album">View Photo Album</string>
    <string name="view_photo">View Photo</string>
    <string name="add_patient">Add Patient</string>
    <string name="patuser">Patient Username:</string>
    <string name="edit_title">Modify the problem\'s title:</string>
    <string name="edit_date">Modify the start date for the problem:</string>
    <string name="edit_description">Modify the description:</string>
    <string name="delete_problem">Delete Problem</string>
    <string name="Patient" />
    <string name="patient">Patient</string>
    <string name="care_provider">Care Provider</string>
    <string name="title">Title:</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="home">Home</string>
    <string name="home_page">Home Page</string>
    <string name="view_problems3">View Problems</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="view_patients">View Patients</string>
    <string name="enter_username2">Enter Username:</string>
    <string name="edit_record">Edit Record</string>
    <string name="view_full_record">View Full Record</string>
    <string name="problems">Problems</string>
    <string name="contactinfo">Contact Info</string>
    <string name="slideshowprev">Previous</string>
    <string name="slideshownext">Next</string>
    <string name="slideshownull"> No Images in this Record. </string>
    <string name="edit_account">Edit Account</string>
    <string name="username2">Username:</string>
    <string name="email_address">Email Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="save_info">save Information</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_map">Show Map</string>
    <string name="view_map">View Map</string>
    <string name="delete_photo">Delete</string>
    <string name="enter_title3">Enter Title for Record</string>
    <string name="enter_comment">Enter Comment for Record</string>
    <string name="title_activity_map_of_records">Map2</string>
    <string name="qr_desc">This is your unique QR code!</string>
    <string name="Return">Return</string>
    <string name="view_qr">View QR Code</string>
    <string name="qrscantip">Or, add a patient by scanning their QR code:</string>
    <string name="scanqr">Scan QR Code</string>
    <string name="useqrtologin">Use QR to Login</string>
    <string name="or">or</string>
    <string name="regarding_problem">Regarding Problem:</string>
    <string name="record_title">Record Title:</string>
    <string name="time_stamp2">Time Stamp:</string>
    <string name="comment">Comment:</string>
    <string name="body_location">Body Location:</string>
    <string name="geolocation">Geolocation:</string>
    <string name="viewgeolocation">Geolocation</string>
    <string name="photos">Photos:</string>
    <string name="view_all_records">View All Records</string>
    <string name="title_activity_map_of_single_record">Map</string>
    <string name="modify_title">Modify the title:</string>
    <string name="modify_time">Modify the time stamp:</string>
    <string name="edit_timestamp">Select to Change Time Stamp</string>
    <string name="modify_comment">Modify the comment:</string>
    <string name="delete_record">Delete Record</string>
    <string name="modify_geolocation">Modify the geolocation:</string>

    <string name="title_activity_edit_map_of_record">Map</string>
    <string name="view_author">View Author</string>
    <string name="keyword_search">Search by Keywords</string>
    <string name="geolocation_search">Search by Geo Location</string>
    <string name="bodylocation_search">Search by Body Location</string>
    <string name="search_separator">Please separate keywords by a semicolon (;)</string>
    <string name="search">Search</string>
    <string name="keyword">Keyword;</string>
    <string name="change_timestamp">Select to Change Time Stamp</string>
    <string name="title_activity_edit_record_map">Map</string>
    <string name="sideShow">Slide Show Mode</string>
    <string name="view_front_body_parts">View Front Body Parts</string>
    <string name="view_back_body_parts">View Back Body Parts</string>
    <string name="done">Done</string>
    <string name="map_of_records">Map of Records</string>
    <string name="select_geolocation">Select Geolocation</string>
    <string name="select_body_location">Select body location</string>
    <string name="search_problems">Search Problems</string>
    <string name="search_records">Search Records</string>
    <string name="enter_distance">Enter distance in KM</string>
    <string name="profile">Profile</string>
    <string name="caregiver_comments">Careprovider Comments:</string>
    />
    />


</resources>
