<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeMenuItem"
        android:title="new"
        android:orderInCategory="101"
        android:icon="@drawable/menu_image"
        app:showAsAction="always">

        <menu>

            <item android:id="@+id/action_home"
                android:title="@string/home"
                android:onClick="viewHome"/>

            <item android:id="@+id/action_editAccount"
                android:title="@string/edit_account"
                android:onClick="viewEditAccount"
                />
            <item android:id="@+id/action_viewProblems"
                android:title="@string/view_problems3"
                android:onClick="viewViewProblems"
                />
            <item android:id="@+id/action_viewMap"
                android:title="@string/view_map"
                android:onClick="viewMap"
                />
            <item
                android:id="@+id/action_viewQR"
                android:onClick="viewViewQR"
                android:title="@string/view_qr" />

            <item android:id="@+id/action_logout"
                android:title="@string/logout"
                android:onClick="viewLogout"
                />

        </menu>

    </item>

</menu>