<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProblemActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/addProblem_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/logoColor"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/background_light" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/EnterTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_title2"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/EnterTitleEditText"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_title"
            android:textAlignment="center"
            android:maxLength="30"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/EnterDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_start_date"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/AddDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id = "@+id/DateEnteredTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/EnterDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_description"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/EnterDescriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_description2"
            android:maxLength="300"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/SaveProblemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addProblem"
            android:text="@string/save_problem"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>