<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/list_item_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="18dp"
        android:paddingLeft="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
         />

    <Button
        android:id="@+id/viewFullProblemButton"
        android:layout_width="95dp"
        android:layout_height="62dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="80dp"
        android:text="@string/view_full_problem" />

    <Button
        android:id="@+id/addRecordButton"
        android:layout_width="95dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="80dp"
        android:layout_toLeftOf="@id/viewFullProblemButton"
        android:text="@string/add_record" />

    <Button
        android:id="@+id/viewRecordsButton"
        android:layout_width="95dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="80dp"
        android:layout_toLeftOf="@id/addRecordButton"
        android:text="@string/view_records" />

    <Button
        android:id="@+id/editRecordButton"
        android:layout_width="95dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="80dp"
        android:layout_toLeftOf="@id/addRecordButton"
        android:text="@string/edit_problem" />


</RelativeLayout>